--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <title>Iguana Diet</title>
 
   <meta charset="utf-8">
+  <meta name="viewport"
+content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" href="styles/original.css">
   <link rel="stylesheet" type="text/css" href="styles/print.css" media="print">
 </head>
